--- a/app/layouts/questionLayout.phtml
+++ b/app/layouts/questionLayout.phtml
@@ -8,155 +8,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <style>
-        .navbar {
-            margin-bottom: 0;
-            border-radius: 0;
-        }
-        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-        
-        .row.content {
-            height: 450px
-        }
-        /* Set gray background color and 100% height */
-        
-        .sidenav {
-            padding-top: 20px;
-            background-color: #f1f1f1;
-            height: 100%;
-        }
-        /* Set black background color, white text and some padding */
-        
-        footer {
-            background-color: #555;
-            color: white;
-            padding: 15px;
-        }
-        /* On small screens, set height to 'auto' for sidenav and grid */
-        
-        @media screen and (max-width: 767px) {
-            .sidenav {
-                height: auto;
-                padding: 15px;
-            }
-            .row.content {
-                height: auto;
-            }
-        }
-        
-        footer {
-            background: #16222A;
-            background: -webkit-linear-gradient(59deg, #3A6073, #16222A);
-            background: linear-gradient(59deg, #3A6073, #16222A);
-            color: white;
-            margin-top: 100px;
-        }
-        
-        footer a {
-            color: #fff;
-            font-size: 14px;
-            transition-duration: 0.2s;
-        }
-        
-        footer a:hover {
-            color: #FA944B;
-            text-decoration: none;
-        }
-        
-        .copy {
-            font-size: 12px;
-            padding: 10px;
-            border-top: 1px solid #FFFFFF;
-        }
-        
-        .footer-middle {
-            padding-top: 2em;
-            color: white;
-        }
-        /*SOCİAL İCONS*/
-        /* footer social icons */
-        
-        ul.social-network {
-            list-style: none;
-            display: inline;
-            margin-left: 0 !important;
-            padding: 0;
-        }
-        
-        ul.social-network li {
-            display: inline;
-            margin: 0 5px;
-        }
-        /* footer social icons */
-        
-        .social-network a.icoFacebook:hover {
-            background-color: #3B5998;
-        }
-        
-        .social-network a.icoLinkedin:hover {
-            background-color: #007bb7;
-        }
-        
-        .social-network a.icoFacebook:hover i,
-        .social-network a.icoLinkedin:hover i {
-            color: #fff;
-        }
-        
-        .social-network a.socialIcon:hover,
-        .socialHoverClass {
-            color: #44BCDD;
-        }
-        
-        .social-circle li a {
-            display: inline-block;
-            position: relative;
-            margin: 0 auto 0 auto;
-            -moz-border-radius: 50%;
-            -webkit-border-radius: 50%;
-            border-radius: 50%;
-            text-align: center;
-            width: 30px;
-            height: 30px;
-            font-size: 15px;
-        }
-        
-        .social-circle li i {
-            margin: 0;
-            line-height: 30px;
-            text-align: center;
-        }
-        
-        .social-circle li a:hover i,
-        .triggeredHover {
-            -moz-transform: rotate(360deg);
-            -webkit-transform: rotate(360deg);
-            -ms--transform: rotate(360deg);
-            transform: rotate(360deg);
-            -webkit-transition: all 0.2s;
-            -moz-transition: all 0.2s;
-            -o-transition: all 0.2s;
-            -ms-transition: all 0.2s;
-            transition: all 0.2s;
-        }
-        
-        .social-circle i {
-            color: #595959;
-            -webkit-transition: all 0.8s;
-            -moz-transition: all 0.8s;
-            -o-transition: all 0.8s;
-            -ms-transition: all 0.8s;
-            transition: all 0.8s;
-        }
-        
-        .social-network a {
-            background-color: #F9F9F9;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./libs/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./libs/css/LoginSignup.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-inverse" style="height: 100px;">
+<nav class="navbar navbar-inverse" style="height: 100px;">
         <div class="container-fluid" style="margin-top: 20px;">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -165,7 +23,7 @@
         <span class="icon-bar"></span>                        
       </button>
                 <a href="#">
-                    <img src="E:\Microsoft VS Code\resources\PTUD\Logo.jpg" height="60px" width="80px" style="border-radius: 5px; margin-right: 20px; margin-top: -5px;" />
+                    <img src="Logo.jpg" height="60px" width="80px" style="border-radius: 5px; margin-right: 20px; margin-top: -5px;" />
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
@@ -185,13 +43,7 @@
                     </div>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href=#>
-                            <img src="User.png" height="30px" width="30px" style="background-color: transparent;margin-top: -5px;" />
-                            <span>User Name</span>
-                        </a>
-                    </li>
-                    <li><a href="Q&A.html"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                    <li><a href="index.php?action=login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
         </div>
@@ -203,6 +55,11 @@
                 <p style="background-color:moccasin;"><a href="#"><b>Topic</b></a></p>
                 <p><a href="#"><b>Technology</b></a></p>
                 <p><a href="#"><b>Society</b></a></p>
+            </div>
+            <div class="col-sm-10">
+            <div id="primary">                    
+                    <?php require($VIEW); ?>
+                </div>
             </div>
         </div>
     </div>
