--- a/app/views/user/login/signup.phtml
+++ b/app/views/user/login/signup.phtml
@@ -1,15 +1,15 @@
 <div class="wrapper fadeInDown">
   <div id="formContent">
     <!-- Tabs Titles -->
-    <h2 class="inactive underlineHover"><a href="index.php?action=login"> Sign In </a></h2>
+    <h2 class="inactive underlineHover"><a href="/UDPT-PROJECT/user/login"> Sign In </a></h2>
     <h2 class="active">Sign Up </h2>
   
 
     <!-- Login Form -->
     <form  method="post" >
       <input type="text" id="Username" class="fadeIn second" name="Username" placeholder="Username">
-      <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
-      <input type="password" id="repassword" class="fadeIn third" name="repassword" placeholder="Repassword">
+      <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password">
+      <input type="text" id="repassword" class="fadeIn third" name="repassword" placeholder="Repassword">
       <input type="text" id="name" class="fadeIn third" name="name" placeholder="Name">
       <input type="email" id="email" class="fadeIn third" name="email" placeholder="Email">
       <input type="date" id="birth" class="fadeIn third" name="birth" placeholder="Birth">
