--- a/app/layouts/questionLayout.phtml
+++ b/app/layouts/questionLayout.phtml
@@ -43,7 +43,7 @@
                     </div>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/user/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a href="/UDPT-PROJECT/user/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
         </div>
