sửa cấu truc app

--- a/app/views/login/login.phtml
+++ b/app/views/login/login.phtml
@@ -2,7 +2,7 @@
   <div id="formContent">
     <!-- Tabs Titles -->
     <h2 class="active"> Sign In </h2>
-    <h2 class="inactive underlineHover"><a href="/UDPT-PROJECT/user/signup">Sign Up </a></h2>
+    <h2 class="inactive underlineHover"><a href="/UDPT-PROJECT/signup">Sign Up </a></h2>
 
    
 
