--- a/app/views/login/signup.phtml
+++ b/app/views/login/signup.phtml
@@ -1,7 +1,7 @@
 <div class="wrapper fadeInDown">
   <div id="formContent">
     <!-- Tabs Titles -->
-    <h2 class="inactive underlineHover"><a href="/UDPT-PROJECT/user/login"> Sign In </a></h2>
+    <h2 class="inactive underlineHover"><a href="/UDPT-PROJECT/login"> Sign In </a></h2>
     <h2 class="active">Sign Up </h2>
   
 
