--- a/app/layouts/questionLayout.phtml
+++ b/app/layouts/questionLayout.phtml
@@ -43,12 +43,21 @@
                     </div>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <?php if(isset($_SESSION['jwt'])) : ?>
+                    <li>
+                        <a href=#>
+                            <img src="/UDPT-PROJECT/public/images/User.png" height="30px" width="30px" style="background-color: transparent;margin-top: -5px;" />
+                            <span><?php echo $_SESSION['name']; ?></span>
+                        </a>
+                    </li>
+                    <li><a href="/UDPT-PROJECT/login/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                    <?php else : ?>
                     <li><a href="/UDPT-PROJECT/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <?php endif; ?>
                 </ul>
             </div>
         </div>
     </nav>
-
     <div class="container-fluid text-center">
         <div class="row content">
             <div class="col-sm-2 sidenav">
