--- a/app/views/login/otp.phtml
+++ b/app/views/login/otp.phtml
@@ -27,22 +27,28 @@
 $(document).ready(function(){
   $("#sendOtp").on("click", function(e){ 
     e.preventDefault();    
-    var email = $("#email").text();
+    var email = 
+    {
+      email: "<?php echo $_SESSION['email']?>",
+      otp: "<?php  $rndno=rand(100000, 999999);
+        $_SESSION["otp"] = $rndno;
+        echo $rndno;
+      ?>"
+    }
     $.ajax({
       headers: {
       'Connection': 'Keep-Alive',
       'Content-Type': 'application/json; charset=utf-8'
       },
+      url  : "<?php echo _API_ROOT.'SendOTP/sendotp.php' ?>",
       type : "POST",
-      url  : _API_ROOT.'SendOTP/sendotp.php',
-      dataType: "json",
-      data : {email:email},
-      success:function(result, status, xhr){
-        alert(xhr.status);
-        alert("hahaah");
+      data : JSON.stringify(email),
+      success:function(result){
+        alert("Đã gửi otp");
       },
-      error: function (xhr, status, error) {
-        alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+      error: function (xhr, thrownError, result) {
+        alert(xhr.status);
+        alert(thrownError);
       }
     });  
       
