--- a/app/views/user/userProfile.phtml
+++ b/app/views/user/userProfile.phtml
@@ -1,4 +1,5 @@
 <?php require_once("./app/views/header-footer/header.phtml"); ?>
+<?php require_once "./app/config.php";?>
 <div class="container-fluid text-center">
     <div class="row content">
         <div class="col-sm-2 sidenav">
@@ -11,7 +12,11 @@
                 <div class="col-md-4">
                     <div class="profile-img">
                     <form>
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog" alt=""/>
+                        <?php if(isset($user["image"])):?>
+                        <img src="<?php echo $user["image"]?>" />
+                        <?php else : ?>
+                          <img src="/UDPT-PROJECT/public/images/User.png" />
+                        <?php endif; ?>
                         <div class="file btn btn-lg btn-primary">
                             Change Photo
                             <input type="file" name="file"/>
@@ -22,29 +27,65 @@
                 <div class="col-md-6" style="text-align:left">
                     <div class="profile-head">
                         <h3><b>
-                            Kshiti Ghelani
+                            <?php if(isset($user["name"]))
+                              echo $user["name"]
+                            ?>
                         </b></h3>
+                        <h6>
+                          <?php  echo $user["created"]?> Join
+                        </h6>
                         <div class="row" style="margin-top:2%">
-                            <div class="col-md-6"><b>Email : </b><span>tubato1999@gmail.com</span></div>
-                            <div class="col-md-6"><b>Phone : </b><span>0858456152</span></div>
+                            <div class="col-md-6"><b>Email : </b>
+                            <?php if(isset($user["email"])):?>
+                            <span><?php echo $user["email"]?></span></div>
+                            <?php else : ?>
+                              <span>Null</span></div>
+                              <?php endif; ?>
+                            <div class="col-md-6"><b>Phone : </b>
+                            <?php if(isset($user["phone"])):?>
+                            <span><?php echo$user["phone"]?></span></div>
+                            <?php else : ?>
+                              <span>Null</span></div>
+                              <?php endif; ?>
                         </div>
                         <div class="row" style="margin-top:2%">
-                            <div class="col-md-6"><b>Birth : </b><span>02/06/1999</span></div>
+                            <div class="col-md-6"><b>Birth : </b>
+                            <?php if(isset($user["birth"])):?>
+                            <span><?php echo$user["birth"]?></span></div>
+                            <?php else : ?>
+                              <span>Null</span></div>
+                              <?php endif; ?>
                         </div>
                         <div class="row" style="margin-top:2%">
-                            <div class="col-md-4"><b style="font-size: 18px">Questions : <span>10</span></b></div>
-                            <div class="col-md-4"><b style="font-size: 18px">Aswers : <span>110</span></b></div>
+                            <div class="col-md-4"><b style="font-size: 18px">Questions : 
+                            <?php if(isset($user["ques"])):?>
+                            <span><?php echo$user["ques"]?></span>
+                            <?php else : ?>
+                              <span>0</span>
+                            <?php endif; ?>
+                            </b></div>
+                            <div class="col-md-4"><b style="font-size: 18px">Aswers : 
+                            <?php if(isset($user["answer"])):?>
+                            <span><?php echo$user["answer"]?></span>
+                            <?php else : ?>
+                              <span>0</span>
+                            <?php endif; ?>
+                            </b></div>
                         </div>
                         
                     </div>
                 </div>
+                
                 <div class="col-md-2">
+                <?php if($user["id"] == $_SESSION["user_id"]):?>
                 <button type="button" class="btn btn-info" style="width:90%;margin:2%" data-toggle="modal" data-target="#changeprofile">Change profile</button>
                 <button type="button" class="btn btn-info" style="width:90%;margin:2%" data-toggle="modal" data-target="#changepass">Change Pass</button>
+                <?php endif; ?>
                 </div>
             </div>
             <div class="row">
-                
+              <div class="col-md-4">
+                </div>   
             
             </div>
         </div>
@@ -80,16 +121,62 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        body
+      <div class="modal-body" style="text-align: center;">
+        <input type="password"  class="fadeIn third" name="oldpassword" placeholder="Old Password">
+        <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
+        <input type="password"  class="fadeIn third" name="repassword" placeholder="Repassword">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" id="changepasss" >Save changes</button>
       </div>
     </div>
   </div>
 </div>
+<script type="text/javascript">
+$(document).ready(function(){
+  $("#changepasss").on("click", function(){    
+    if($("input[name=password]").val() != $("input[name=repassword]").val())
+    {
+      alert("hihi");
+    }
+    else
+    {
+      var pass = {
+      jwt:`<?php echo $_SESSION['jwt']?>`,
+      password:$("input[name=password]").val(),
+      oldpassword:$("input[name=oldpassword]").val(),
+      id_user:<?php echo $_SESSION['user_id']?>
+      };
+    $.ajax({
+      contentType: 'application/json; charset=utf-8',
+      type : "POST",
+      url  : "<?php echo (_API_ROOT.'user_account/changepass.php')?>",
+      dataType: "json",
+      success:function(result, status, xhr){
+        $("input[name=password]").val('')
+        $("input[name=oldpassword]").val('')
+        $("input[name=repassword]").val('')
+        alert("Change Password Success");
+        
+      },
+      error: function (xhr, status, error, data) {
+        if(xhr.status == 401)
+        {
+          alert("Phiên đăng nhập của bạn đã hết. Xin vui lòng đăng nhập lại");
+          window.location="<?php echo _Web_ROOT."/login/logout" ;?>";
+        }
+        else
+        {
+          alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+        }
+        
+      },
+      data : JSON.stringify(pass)
+    });  
+    }
 
+    });   
+});
+</script>
 <?php require_once("./app/views/header-footer/footer.phtml"); ?>
-
