Hoàn thành chức năng đổi avatar, dổi thông tin, đổi mật khẩu

--- a/app/views/login/login.phtml
+++ b/app/views/login/login.phtml
@@ -18,9 +18,15 @@
     </form>
     
     <!-- Remind Passowrd -->
-    <div id="formFooter">
-      <a class="underlineHover" href="/UDPT-PROJECT/forgotpass">Forgot Password?</a>
+    <div id="formFooter" >
+      <div class="row">
+        <div class="col-md-6" style="text-align:left">
+          <a class="underlineHover" href="/UDPT-PROJECT">Home Page</a>
+        </div >
+        <div class="col-md-6" style="text-align:right">
+          <a class="underlineHover" href="/UDPT-PROJECT/forgotpass" style="margin-right:0">Forgot Password?</a>
+        </div>
+      </div>
     </div>
-
   </div>
 </div>
