--- a/app/views/header-footer/footer.phtml
+++ b/app/views/header-footer/footer.phtml
@@ -5,8 +5,8 @@
                 <div class="col-md-3 col-sm-6">
                     <!--Column1-->
                     <div class="footer-pad">
-                        <a href="#">
-                            <img src="E:\Microsoft VS Code\resources\PTUD\Logo.jpg" height="80px" width="100px" style="border-radius: 5px;margin-left: 30px;" />
+                        <a href="/UDPT-PROJECT">
+                            <img src="/UDPT-PROJECT/public/images/Logo.jpg" height="80px" width="100px" style="border-radius: 5px;margin-left: 30px;" />
                             <h4><b>Question And Answer</b></h4>
                         </a>
 
