--- a/app/views/user/userProfile.phtml
+++ b/app/views/user/userProfile.phtml
@@ -11,16 +11,21 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="profile-img">
-                    <form>
+                    <form id="upfile" method="POST">
                         <?php if(isset($user["image"])):?>
                         <img src="<?php echo $user["image"]?>" />
                         <?php else : ?>
                           <img src="/UDPT-PROJECT/public/images/User.png" />
                         <?php endif; ?>
+
+                        <?php if($user["id"] == $_SESSION["user_id"]):?>
                         <div class="file btn btn-lg btn-primary">
                             Change Photo
-                            <input type="file" name="file"/>
+                            <input type="file"  name="fileupload" id="fileupload"/>
                         </div>
+                        <input type="hidden"  name="jwt" id="jwt" value="<?php echo $_SESSION["jwt"]?>"/>  
+                        <input type="hidden"  name="id_user" id="id_user" value="<?php echo $_SESSION["user_id"]?>"/>       
+                        <?php endif; ?>
                     </form>
                     </div>
                 </div>
@@ -53,7 +58,7 @@
                             <?php if(isset($user["birth"])):?>
                             <span><?php echo$user["birth"]?></span></div>
                             <?php else : ?>
-                              <span>Null</span></div>
+                              <span>Null</span></>
                               <?php endif; ?>
                         </div>
                         <div class="row" style="margin-top:2%">
@@ -78,6 +83,7 @@
                 
                 <div class="col-md-2">
                 <?php if($user["id"] == $_SESSION["user_id"]):?>
+                
                 <button type="button" class="btn btn-info" style="width:90%;margin:2%" data-toggle="modal" data-target="#changeprofile">Change profile</button>
                 <button type="button" class="btn btn-info" style="width:90%;margin:2%" data-toggle="modal" data-target="#changepass">Change Pass</button>
                 <?php endif; ?>
@@ -101,12 +107,17 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        body
-      </div>
+      <div class="modal-body" style="text-align: center;">
+      <form method="get">
+      <input type="text"  class="fadeIn third" name="name" placeholder="Name" value="<?php echo $user["name"]?>">
+        <input type="email"  class="fadeIn third" name="email" placeholder="Email" value="<?php echo $user["email"]?>">
+        <input type="date"  class="fadeIn third" name="birth" placeholder="Birth" value="<?php echo $user["birth"]?>">
+        <input type="text"  class="fadeIn third" name="phone" placeholder="Phone" value="<?php echo $user["phone"]?>">
+      </form>
+        </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" id="changeinfo">Save changes</button>
       </div>
     </div>
   </div>
@@ -138,7 +149,7 @@ $(document).ready(function(){
   $("#changepasss").on("click", function(){    
     if($("input[name=password]").val() != $("input[name=repassword]").val())
     {
-      alert("hihi");
+      alert("Password and Repassword do not match");
     }
     else
     {
@@ -148,35 +159,101 @@ $(document).ready(function(){
       oldpassword:$("input[name=oldpassword]").val(),
       id_user:<?php echo $_SESSION['user_id']?>
       };
-    $.ajax({
-      contentType: 'application/json; charset=utf-8',
-      type : "POST",
-      url  : "<?php echo (_API_ROOT.'user_account/changepass.php')?>",
-      dataType: "json",
-      success:function(result, status, xhr){
-        $("input[name=password]").val('')
-        $("input[name=oldpassword]").val('')
-        $("input[name=repassword]").val('')
-        alert("Change Password Success");
-        
-      },
-      error: function (xhr, status, error, data) {
-        if(xhr.status == 401)
-        {
-          alert("Phiên đăng nhập của bạn đã hết. Xin vui lòng đăng nhập lại");
-          window.location="<?php echo _Web_ROOT."/login/logout" ;?>";
-        }
-        else
-        {
-          alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
-        }
-        
-      },
-      data : JSON.stringify(pass)
-    });  
+      $.ajax({
+        contentType: 'application/json; charset=utf-8',
+        type : "POST",
+        url  : "<?php echo (_API_ROOT.'user_account/changepass.php')?>",
+        dataType: "json",
+        success:function(result, status, xhr){
+          $("input[name=password]").val('')
+          $("input[name=oldpassword]").val('')
+          $("input[name=repassword]").val('')
+          alert("Change Password Success");
+          
+        },
+        error: function (xhr, status, error) {
+          if(xhr.status == 401)
+          {
+            alert("Phiên đăng nhập của bạn đã hết. Xin vui lòng đăng nhập lại");
+            window.location="<?php echo _Web_ROOT."/login/logout" ;?>";
+          }
+          else
+          {
+            alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+          }
+          
+        },
+        data : JSON.stringify(pass)
+      });  
     }
 
-    });   
+  });   
+
+  $("#changeinfo").on("click", function(){    
+    if($("input[name=name]").val() == "" || $("input[name=email]").val()== "" || $("input[name=phone]").val()== "" || $("input[name=birth]").val()== "")
+    {
+      alert("Xin vui lòng nhập đủng thông tin");
+    }
+    else
+    {
+      var user = {
+      jwt:`<?php echo $_SESSION['jwt']?>`,
+      email:$("input[name=email]").val(),
+      name:$("input[name=name]").val(),
+      phone:$("input[name=phone]").val(),
+      birth:$("input[name=birth]").val(),
+      id_user:<?php echo $_SESSION['user_id']?>
+      };
+      $.ajax({
+        contentType: 'application/json; charset=utf-8',
+        type : "POST",
+        url  : "<?php echo (_API_ROOT.'user_account/update.php')?>",
+        dataType: "json",
+        success:function(result, status, xhr){
+          var obj = jQuery.parseJSON( result );
+          alert("Change Profile Success");
+          window.location="<?php echo _Web_ROOT."/userProfile/".$_SESSION['user_id'] ;?>";
+        },
+        error: function (xhr, status, error) {
+          if(xhr.status == 401)
+          {
+            alert("Phiên đăng nhập của bạn đã hết. Xin vui lòng đăng nhập lại");
+            window.location="<?php echo _Web_ROOT."/login/logout" ;?>";
+          }
+          else
+          {
+            alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+          }
+          
+        },
+        data : JSON.stringify(user)
+      });  
+    }
+
+  }); 
+
+  $("#fileupload").change(function(e) { 
+    e.preventDefault();
+    let myForm = document.getElementById('upfile');
+    let formData = new FormData(myForm);
+    $.ajax({
+      url  : "<?php echo (_API_ROOT.'user_account/uploadavata.php')?>",
+      type : "POST",
+      processData: false,
+      contentType: false,
+      success:function(result, status, xhr){
+        var obj = jQuery.parseJSON( result );
+        alert("Change Avatar Success");
+        window.location="<?php echo _Web_ROOT."/userProfile/".$_SESSION['user_id'] ;?>";
+      },
+      error: function (xhr, status, error) {
+        alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+      },
+      data : formData,
+    });  
+  });
 });
+
+
 </script>
 <?php require_once("./app/views/header-footer/footer.phtml"); ?>
