--- a/app/layouts/questionLayout.phtml
+++ b/app/layouts/questionLayout.phtml
@@ -18,5 +18,15 @@
 
 <body>
 <?php require($VIEW); ?>
+<div class="modal fade" id="loadMe" tabindex="-1" role="dialog" aria-labelledby="loadMeLabel">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-body row" >
+        <div id="loader" ></div>
+        <div style="margin-left:5%; font-size: 30px;">Loading..........</div> 
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
