update: don't allow to edit if the record has been deleted

--- a/app-admin/public/css/admin.css
+++ b/app-admin/public/css/admin.css
@@ -116,6 +116,10 @@ table.table td a:hover {
     color: #2196F3;
 }
 
+table.table td a.accept {
+    color: #179c23;
+}
+
 table.table td a.edit {
     color: #FFC107;
 }
