--- a/app/views/header-footer/header.phtml
+++ b/app/views/header-footer/header.phtml
@@ -1,49 +1,49 @@
 <nav class="navbar navbar-inverse" style="height: 100px;">
-        <div class="container-fluid" style="margin-top: 20px;">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-                <a href="/UDPT-PROJECT">
-                    <img src="/UDPT-PROJECT/public/images/Logo.jpg" height="60px" width="80px" style="border-radius: 5px; margin-right: 20px; margin-top: -5px;" />
-                </a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Ranking</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-nav">
-                    <div class="header-search w56 fl search-type-2 not-logins" style="margin-top: 7px;margin-left: 30px;">
-                        <form action="/search" class="search search-top" style="border-radius: 5px;">
-                            <input type="search" name="keyword" class="searchTerm" placeholder="Input Search Text" style="box-sizing: unset; padding-right: 50px;height: 30px;padding-left: 5px;width: 480px; border-radius: 5px;">
-                            <button type="submit" class="searchButton" style="height: 33px; width:80px; border-radius: 5px;">
+    <div class="container-fluid" style="margin-top: 20px;">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="<?php echo _WEB_ROOT ?>">
+                <img src="<?php echo _PUBLIC ?>/images/Logo.jpg" height="60px" width="80px" style="border-radius: 5px; margin-right: 20px; margin-top: -5px;" />
+            </a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Ranking</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-nav">
+                <div class="header-search w56 fl search-type-2 not-logins" style="margin-top: 7px;margin-left: 30px;">
+                    <form action="/search" class="search search-top" style="border-radius: 5px;">
+                        <input type="search" name="keyword" class="searchTerm" placeholder="Input Search Text" style="box-sizing: unset; padding-right: 50px;height: 30px;padding-left: 5px;width: 480px; border-radius: 5px;">
+                        <button type="submit" class="searchButton" style="height: 33px; width:80px; border-radius: 5px;">
                             <span style="font-size: medium;">Search</span>
                         </button>
-                        </form>
-                    </div>
-                </ul>
-                <ul class="nav navbar-nav navbar-right" >
-                    <?php if(isset($_SESSION['jwt'])) : ?>
+                    </form>
+                </div>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <?php if (isset($_SESSION['jwt'])) : ?>
                     <li>
-                        <a href="/UDPT-PROJECT/userProfile/<?php  echo $_SESSION["user_id"]?>">
-                        <?php 
-                            if($_SESSION['image'] != null):?>
+                        <a href="<?php echo _WEB_ROOT ?>/userProfile/<?php echo $_SESSION["user_id"] ?>">
+                            <?php
+                            if ($_SESSION['image'] != null) : ?>
                                 <img src="<?php echo $_SESSION["image"]; ?>" height="40px" width="40px" style="background-color: transparent;margin-top: -5px; border-radius: 50%;" />
                             <?php else : ?>
-                                <img src="/UDPT-PROJECT/public/images/User.png" height="40px" width="40px" style="background-color: transparent;margin-top: -5px;border-radius: 50%;" />
+                                <img src="<?php echo _PUBLIC ?>/images/User.png" height="40px" width="40px" style="background-color: transparent;margin-top: -5px;border-radius: 50%;" />
                             <?php endif; ?>
                             <span><?php echo $_SESSION['name']; ?></span>
                         </a>
                     </li>
-                    <li><a href="/UDPT-PROJECT/login/logout"><span class="glyphicon glyphicon-log-in" ></span> Logout</a></li>
-                    <?php else : ?>
-                    <li><a href="/UDPT-PROJECT/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                    <?php endif; ?>
-                </ul>
-            </div>
+                    <li><a href="<?php echo _WEB_ROOT ?>/login/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                <?php else : ?>
+                    <li><a href="<?php echo _WEB_ROOT ?>/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <?php endif; ?>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
