--- a/app/views/login/login.phtml
+++ b/app/views/login/login.phtml
@@ -1,3 +1,6 @@
+<div style="background-color: #5fbae9">
+
+</div>
 <div class="wrapper fadeInDown">
   <div id="formContent">
     <!-- Tabs Titles -->
