--- a/app/layouts/questionLayout.phtml
+++ b/app/layouts/questionLayout.phtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #fff">
 
 <head>
     <title>Question And Answer</title>
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/UDPT-PROJECT/public/css/LoginSignup.css">
     <link rel="stylesheet" type="text/css" href="/UDPT-PROJECT/public/css/style.css">
 
-
+    
 
 </head>
 
